# MS_01_Team_59_Project

./: CMakeLists.txt  LED.h  MS_01.c  MS_02.c  infrared_sensor.h
Buzzer/: buzzer.c  buzzer.h
Infrared/: infrared_sensor.c  infrared_sensor.h
LDR/: LDR.c  LDR.h
Led/: LED.c
UltraSonic/: ultrasonic_sensor.c  ultrasonic_sensor.h
infrared_sensor/: infrared_sensor.c
motor/: motor_control.c  motor_control.h
motor_control/: motor_control.c  motor_control.h
